# coms10016-imperative-programming-coursework

./: .clang-format  .gitignore  CMakeLists.txt  Makefile  README.md
.github/workflows/: ci.yml
animations/: README.md  prepare_sketch_trace.py  render.sh  toolkit_stories.py
app/: binary_main.c  donut_main.c  sketch_gif_main.c  sketch_inspect_main.c  sketch_pgm_main.c
docs/: ARCHITECTURE.md  SKETCH_FORMAT.md  VISUAL_STORIES.md
examples/: blocks.txt  clipping.txt  gallery-frame-1.sk  gallery-frame-2.sk  generate_fixtures.c  line.trace  line.txt
include/: binary.h  donut.h  sketch.h  toolkit.h
resources/original/: converter.c  list.c  sketch.c  visualise.c
src/: binary.c  donut.c  sketch.c  toolkit.c
test/: binary_test.c  donut_test.c  robustness_test.c  sketch_test.c
